<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGrey"
    android:id="@+id/fragment_login"
    tools:context=".fragment.loginsignup.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_margin="@dimen/space_20"
        android:orientation="vertical">

        <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="@dimen/space_16"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_10"
            />

        <in.exuber.usmarket.fonts.Barlow.BarlowRegularEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/space_48"
            android:layout_marginTop="@dimen/space_6"
            android:background="@drawable/squarebordergrey_whitebackground"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:padding="@dimen/space_12"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_14" />

        <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
            android:id="@+id/tv_login_emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3"
            android:text="@string/error"
            android:textColor="@color/colorErrorRed"
            android:textSize="@dimen/text_12" />

        <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorText"
            android:layout_marginTop="@dimen/space_16"
            android:textSize="@dimen/text_10"
            />


        <in.exuber.usmarket.fonts.Barlow.BarlowRegularEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/space_48"
            android:layout_marginTop="@dimen/space_6"
            android:background="@drawable/squarebordergrey_whitebackground"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:padding="@dimen/space_12"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_14" />

        <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
            android:id="@+id/tv_login_passwordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3"
            android:text="@string/error"
            android:textColor="@color/colorErrorRed"
            android:textSize="@dimen/text_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_login_rememberSelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_12"
                    android:textColor="@color/colorText"
                    android:buttonTint="@color/colorLightGrey"
                    android:text="@string/remember_me"
                    />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:layout_marginStart="@dimen/space_8"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_login_forgotClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_12"
                    android:gravity="end"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_loginClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <in.exuber.usmarket.fonts.Barlow.BarlowBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/log_in"
                android:gravity="center"
                android:textSize="@dimen/text_14"
                android:layout_margin="@dimen/space_16"
                />

        </LinearLayout>

        <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
            android:id="@+id/tv_login_registerClickText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textColorLink="@color/colorPrimary"
            android:layout_marginTop="@dimen/space_24"
            android:textSize="@dimen/text_12"
            />

    </LinearLayout>




</android.support.v4.widget.NestedScrollView>