<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_app_intro_two"
    android:background="@color/colorWhite"
    android:padding="@dimen/space_32"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragment.appintro.AppIntroTwoFragment">


    <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
        android:id="@+id/tv_appIntroTwoFragment_skipClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_16"
        android:layout_gravity="end"
        android:text="@string/skip"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space_32"
        android:layout_height="match_parent">

        <in.exuber.usmarket.fonts.Barlow.BarlowMediumTextView
            android:id="@+id/tv_appIntroTwoFragment_sliderHeader"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_26"
            android:textColor="@color/colorPrimary"
            android:text="@string/slider_header_two"/>

        <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
            android:id="@+id/tv_appIntroTwoFragment_sliderText"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_16"
            android:layout_marginBottom="87dp"
            android:textColor="@color/colorText"
            android:text="@string/slider_text_two"/>

        <ImageView
            android:layout_below="@+id/tv_appIntroTwoFragment_sliderHeader"
            android:layout_above="@+id/tv_appIntroTwoFragment_sliderText"
            android:layout_width="300dp"
            android:layout_margin="@dimen/space_24"
            android:layout_height="wrap_content"
            android:src="@drawable/appintro_slider_campaign"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/slider_image_one"/>




    </RelativeLayout>


</LinearLayout>