<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_forgot_password"
    android:background="@color/colorBackgroundGrey"
    tools:context=".activity.forgotpassword.ForgotPasswordActivity">

    <include layout="@layout/toolbar_main"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/colorWhite"
                android:padding="@dimen/space_16">

                <ImageView
                    android:layout_width="@dimen/space_72"
                    android:layout_height="@dimen/space_72"
                    android:src="@drawable/login_logo"
                    android:contentDescription="@string/login_logo" />

                <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forgot_password_header"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_26"/>

                <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forgot_password_subheader"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/space_8"
                    android:textSize="@dimen/text_12"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_margin="@dimen/space_20"
                android:orientation="vertical">

                <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginTop="@dimen/space_16"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_10"
                    />

                <in.exuber.usmarket.fonts.Barlow.BarlowRegularEditText
                    android:id="@+id/et_forgotPass_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/space_48"
                    android:layout_marginTop="@dimen/space_6"
                    android:background="@drawable/squarebordergrey_whitebackground"
                    android:hint="@string/email_placeholder"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/space_12"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_14" />

                <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
                    android:id="@+id/tv_forgotPass_emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_3"
                    android:text="@string/error"
                    android:textColor="@color/colorErrorRed"
                    android:textSize="@dimen/text_12" />


                <LinearLayout
                    android:id="@+id/ll_forgotPass_submitClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_24"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <in.exuber.usmarket.fonts.Barlow.BarlowBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:text="@string/submit_caps"
                        android:gravity="center"
                        android:textSize="@dimen/text_14"
                        android:layout_margin="@dimen/space_16"
                        />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>