<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/space_32"
    tools:context=".fragment.appintro.AppIntroThreeFragment">




    <LinearLayout
        android:id="@+id/ll_appIntroFourFragment_getStartedClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16"
        android:layout_marginTop="@dimen/space_32"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp">

        <in.exuber.usmarket.fonts.Barlow.BarlowMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textSize="@dimen/text_16"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_above="@+id/ll_appIntroFourFragment_getStartedClick"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <in.exuber.usmarket.fonts.Barlow.BarlowMediumTextView
            android:id="@+id/tv_appIntroFourFragment_sliderHeader"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_26"
            android:textColor="@color/colorPrimary"
            android:text="@string/slider_header_four"/>

        <in.exuber.usmarket.fonts.Barlow.BarlowRegularTextView
            android:id="@+id/tv_appIntroFourFragment_sliderText"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_16"
            android:textColor="@color/colorText"
            android:text="@string/slider_text_four"/>

        <ImageView
            android:layout_below="@+id/tv_appIntroFourFragment_sliderHeader"
            android:layout_above="@+id/tv_appIntroFourFragment_sliderText"
            android:layout_width="@dimen/space_230"
            android:layout_margin="@dimen/space_24"
            android:layout_height="wrap_content"
            android:src="@drawable/app_intro_rhombus"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/slider_image_one"/>


    </RelativeLayout>


</RelativeLayout>